# apps/api/src/sandbox/services/snapshot.service.ts
@@ -25,6 +25,7 @@ import { OrganizationService } from '../../organization/services/organization.se
 import { SnapshotRunner } from '../entities/snapshot-runner.entity'
 import { Sandbox } from '../entities/sandbox.entity'
 import { SandboxState } from '../enums/sandbox-state.enum'
+import { PaginatedList } from '../../common/interfaces/paginated-list.interface'
 
 const IMAGE_NAME_REGEX = /^[a-zA-Z0-9.\-:]+(\/[a-zA-Z0-9.\-:]+)*$/
 @Injectable()
@@ -167,7 +168,7 @@ export class SnapshotService {
     await this.snapshotRepository.save(snapshot)
   }
 
-  async getAllSnapshots(organizationId: string, page = 1, limit = 10) {
+  async getAllSnapshots(organizationId: string, page = 1, limit = 10): Promise<PaginatedList<Snapshot>> {
     const pageNum = Number(page)
     const limitNum = Number(limit)
 
